--- a/app/views/home/sections/_heading.html.erb
+++ b/app/views/home/sections/_heading.html.erb
@@ -1,4 +1,4 @@
-<div class="flex w-full flex-col">
+<section class="flex w-full flex-col">
   <div class="flex justify-between gap-2">
     <span>
       <%= date_tag(class: "uppercase") %>
@@ -27,4 +27,4 @@
       <% end %>
     </div>
   <% end %>
-</div>
+</section>
