--- a/app/views/layouts/shared/_theme_select.html.erb
+++ b/app/views/layouts/shared/_theme_select.html.erb
@@ -31,7 +31,7 @@
       <li></li>
       <li>
         <%= link_to themes_path do %>
-          <i class="fa-solid fa-palette"></i>
+          <%= solid_icon_tag("palette") %>
           <span class="grow text-sm font-bold">Edit themes</span>
         <% end %>
       </li>
