--- a/app/views/applications/_application.html.erb
+++ b/app/views/applications/_application.html.erb
@@ -1,7 +1,7 @@
 <li id="<%= application.token %>" class="group list-row hover:bg-base-300" data-sortable-update-url="<%= application_path(application) %>">
   <% if application.positionable? %>
     <div class="flex cursor-grab">
-      <i class="fa-solid fa-grip-vertical my-auto"></i>
+      <%= solid_icon_tag("grip-vertical", class: "my-auto") %>
     </div>
   <% end %>
   <%= icon_tag application.icon, class: "size-10 fill-primary my-auto" %>
@@ -22,13 +22,13 @@
 
     <div class="tooltip" data-tip="Edit">
       <%= link_to edit_application_path(application), class: "btn btn-soft hover:btn-primary" do %>
-        <i class="fa-solid fa-pen"></i>
+        <%= solid_icon_tag("pen") %>
       <% end %>
     </div>
 
     <div class="tooltip" data-tip="Delete">
       <%= button_to application, method: :delete, class: "btn btn-error btn-soft hover:btn-error", data: { turbo_confirm: "Confirm deletion of #{application.name}.", confirm_button: "Delete" } do %>
-        <i class="fa-solid fa-trash"></i>
+        <%= solid_icon_tag("trash") %>
       <% end %>
     </div>
   </div>
