--- a/app/views/bookmarks/_sort_toggle.html.erb
+++ b/app/views/bookmarks/_sort_toggle.html.erb
@@ -3,13 +3,13 @@
 <% if setting.parsed_value == "position" %>
   <div class="tooltip tooltip-bottom" data-tip="Sort Alphabetically">
     <%= button_to setting, method: :patch, params: { setting: { value: "name" } }, class: "btn btn-secondary btn-soft" do %>
-      <i class="fa-solid fa-arrow-down-a-z"></i>
+      <%= solid_icon_tag("arrow-down-a-z") %>
     <% end %>
   </div>
 <% else %>
   <div class="tooltip tooltip-bottom" data-tip="Sort Numerically">
     <%= button_to setting, method: :patch, params: { setting: { value: "position" } }, class: "btn btn-secondary btn-soft" do %>
-      <i class="fa-solid fa-arrow-down-1-9"></i>
+      <%= solid_icon_tag("arrow-down-1-9") %>
     <% end %>
   </div>
 <% end %>
