--- a/app/views/bookmarks/heros/_bookmark_setup.html.erb
+++ b/app/views/bookmarks/heros/_bookmark_setup.html.erb
@@ -6,12 +6,12 @@
       <div class="flex flex-col sm:flex-row gap-4 mx-auto">
         <div class="tooltip tooltip-bottom" data-tip="New Bookmark">
           <%= link_to new_bookmark_path(category: category.token), class: "btn btn-soft hover:btn-primary" do %>
-            <i class="fa-solid fa-plus"></i>
+            <%= solid_icon_tag("plus") %>
           <% end %>
         </div>
         <div class="tooltip tooltip-bottom" data-tip="Delete Category">
           <%= button_to category, method: :delete, class: "btn btn-error btn-soft hover:btn-error", data: { turbo_confirm: "Confirm deletion of #{category.name}.", confirm_button: "Delete" } do %>
-            <i class="fa-solid fa-trash-can"></i>
+            <%= solid_icon_tag("trash") %>
           <% end %>
         </div>
       </div>
