--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,7 +1,7 @@
 <li id="<%= category.token %>" class="list-row hover:bg-base-300" data-sortable-update-url="<%= category_path(category) %>">
   <% if category.positionable? %>
     <div class="flex cursor-grab">
-      <i class="fa-solid fa-grip-vertical my-auto"></i>
+      <%= solid_icon_tag("grip-vertical", class: "my-auto") %>
     </div>
   <% end %>
   <div class="text-4xl font-ubuntu font-light opacity-30 tabular-nums my-auto counter"></div>
@@ -18,13 +18,13 @@
 
     <div class="tooltip" data-tip="Edit">
       <%= link_to edit_category_path(category), class: "btn btn-soft hover:btn-primary" do %>
-        <i class="fa-solid fa-pen"></i>
+        <%= solid_icon_tag("pen") %>
       <% end %>
     </div>
 
     <div class="tooltip" data-tip="Delete">
       <%= button_to category, method: :delete, class: "btn btn-error btn-soft hover:btn-error", data: { turbo_confirm: "Confirm deletion of #{category.name}.", confirm_button: "Delete" } do %>
-        <i class="fa-solid fa-trash"></i>
+        <%= solid_icon_tag("trash") %>
       <% end %>
     </div>
   </div>
