--- a/app/views/layouts/shared/_navigation.html.erb
+++ b/app/views/layouts/shared/_navigation.html.erb
@@ -1,4 +1,4 @@
-<div class="dropdown dropdown-bottom dropdown-start">
+<nav class="dropdown dropdown-bottom dropdown-start">
   <%= link_to "#", id: "navigation", tabindex: 0, role: "button", class: "group btn btn-ghost btn-sm" do %>
     <%= inline_svg_tag "icon.svg", class: "size-6 fill-primary/25 group-hover:fill-primary" %>
   <% end %>
@@ -19,4 +19,4 @@
       <li><%= link_to "Themes", themes_path %></li>
     <% end %>
   </ul>
-</div>
+</nav>
