--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -6,12 +6,12 @@
     <div class="flex flex-row justify-between gap-4">
       <div class="tooltip tooltip-bottom" data-tip="New Theme">
         <%= link_to new_theme_path, class: "btn btn-primary btn-soft" do %>
-          <i class="fa-solid fa-plus"></i>
+          <%= solid_icon_tag("plus") %>
         <% end %>
       </div>
       <div class="tooltip tooltip-bottom" data-tip="Home">
         <%= link_to root_path, class: "btn hover:btn-primary" do %>
-          <i class="fa-regular fa-house fill-primary"></i>
+          <%= regular_icon_tag("house") %>
         <% end %>
       </div>
     </div>
