--- a/app/assets/tailwind/action-button.css
+++ b/app/assets/tailwind/action-button.css
@@ -1,7 +1,7 @@
 /* Mobile action button that is inline. */
 @layer components {
   .action-button {
-    @apply fab relative z-0 bottom-auto inset-0;
+    @apply fab relative inset-0 bottom-auto z-0;
   }
 
   .action-button-flower {
