--- a/app/components/oklch_picker_form_component.html.erb
+++ b/app/components/oklch_picker_form_component.html.erb
@@ -3,36 +3,36 @@
   <%= button_tag button_content, type: :button, class: button_classes, data: { action: "click->oklch-picker-form#showModal" } %>
 
   <%= tag.dialog class: "modal", data: { oklch_picker_form_target: "modal" } do %>
-    <div class="modal-box max-w-lg p-0 bg-white/60 backdrop-blur text-black">
-      <div class="flex flex-col m-4 gap-1">
-        <fieldset class="fieldset p-4 bg-white/10 rounded-box border border-black/10">
+    <div class="modal-box max-w-lg bg-white/60 p-0 text-black backdrop-blur">
+      <div class="m-4 flex flex-col gap-1">
+        <fieldset class="fieldset rounded-box border border-black/10 bg-white/10 p-4">
           <legend class="fieldset-legend text-slate-700">Lightness</legend>
           <div class="flex flex-col sm:flex-row items-center gap-4 w-full">
             <%= range_field in: 0..1, step: 0.0001, target: "lightness" %>
             <%= number_field in: 0..1, step: 0.0001, target: "lightness" %>
           </div>
         </fieldset>
-        <fieldset class="fieldset p-4 bg-white/10 rounded-box border border-black/10">
+        <fieldset class="fieldset rounded-box border border-black/10 bg-white/10 p-4">
           <legend class="fieldset-legend text-slate-700">Chroma</legend>
-          <div class="flex flex-col sm:flex-row items-center gap-4 w-full">
+          <div class="flex w-full flex-col items-center gap-4 sm:flex-row">
             <%= range_field in: 0..0.4, step: 0.0001, target: "chroma" %>
             <%= number_field in: 0..0.4, step: 0.0001, target: "chroma" %>
           </div>
         </fieldset>
-        <fieldset class="fieldset p-4 bg-white/10 rounded-box border border-black/10">
+        <fieldset class="fieldset rounded-box border border-black/10 bg-white/10 p-4">
           <legend class="fieldset-legend text-slate-700">Hue</legend>
-          <div class="flex flex-col sm:flex-row items-center gap-4 w-full">
+          <div class="flex w-full flex-col items-center gap-4 sm:flex-row">
             <%= range_field in: 0..360, step: 0.0001, target: "hue" %>
             <%= number_field in: 0..360, step: 0.0001, target: "hue" %>
           </div>
         </fieldset>
       </div>
-      <div class="modal-action m-0 p-4 bg-white/20">
+      <div class="m-0 modal-action bg-white/20 p-4">
         <div class="mr-auto">
-          <div class="btn aspect-square border border-black/10 pointer-events-none" data-oklch-picker-form-target="preview"></div>
-          <%= button_tag "Reset", type: :button, class: "btn text-slate-700 bg-white/20 hover:bg-white/40 border border-black/10", data: { action: "click->oklch-picker-form#reset" } %>
+          <div class="btn pointer-events-none aspect-square border border-black/10" data-oklch-picker-form-target="preview"></div>
+          <%= button_tag "Reset", type: :button, class: "btn border border-black/10 bg-white/20 text-slate-700 hover:bg-white/40", data: { action: "click->oklch-picker-form#reset" } %>
         </div>
-        <%= button_tag "Close", type: :button, class: "btn text-slate-700 bg-white/40 hover:bg-white/60 border border-black/10", data: { action: "click->oklch-picker-form#close" } %>
+        <%= button_tag "Close", type: :button, class: "btn border border-black/10 bg-white/40 text-slate-700 hover:bg-white/60", data: { action: "click->oklch-picker-form#close" } %>
       </div>
     </div>
     <%= tag.div class: "modal-backdrop", data: { action: "click->oklch-picker-form#close" } %>
