--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -1,11 +1,11 @@
 <% content_for :title, "Applications" %>
 
 <div class="w-full">
-  <div class="flex flex-col sm:flex-row justify-between items-center mb-4 gap-4">
-    <h1 class="font-bold text-4xl">Applications</h1>
+  <div class="mb-4 flex flex-col items-center justify-between gap-4 sm:flex-row">
+    <h1 class="text-4xl font-bold">Applications</h1>
     <div class="flex flex-row justify-between gap-4">
       <div class="tooltip tooltip-bottom" data-tip="New Application">
-        <%= link_to new_application_path, class: "btn btn-primary btn-soft" do %>
+        <%= link_to new_application_path, class: "btn btn-soft btn-primary" do %>
           <%= solid_icon_tag("plus") %>
         <% end %>
       </div>
@@ -23,7 +23,7 @@
   <%= turbo_stream_from :applications %>
   <% if @applications.any? %>
     <ul
-      class="list bg-base-200 rounded-box shadow-md"
+      class="list rounded-box bg-base-200 shadow-md"
       data-controller="sortable"
       data-sortable-animation-value="100"
       data-sortable-resource-name-value="application"
