--- a/app/views/bookmarks/heros/_bookmark_setup.html.erb
+++ b/app/views/bookmarks/heros/_bookmark_setup.html.erb
@@ -1,16 +1,16 @@
 <%# locals: (category: nil) %>
-<div class="hero bg-base-200 rounded-box shadow-md border border-neutral">
+<div class="hero rounded-box border border-neutral bg-base-200 shadow-md">
   <div class="hero-content text-center">
-    <div class="max-w-lg flex flex-col gap-6">
+    <div class="flex max-w-lg flex-col gap-6">
       <p>This category does not have any bookmarks.</p>
-      <div class="flex flex-col sm:flex-row gap-4 mx-auto">
+      <div class="mx-auto flex flex-col gap-4 sm:flex-row">
         <div class="tooltip tooltip-bottom" data-tip="New Bookmark">
           <%= link_to new_bookmark_path(category: category.token), class: "btn btn-soft hover:btn-primary" do %>
             <%= solid_icon_tag("plus") %>
           <% end %>
         </div>
         <div class="tooltip tooltip-bottom" data-tip="Delete Category">
-          <%= button_to category, method: :delete, class: "btn btn-error btn-soft hover:btn-error", data: { turbo_confirm: "Confirm deletion of #{category.name}.", confirm_button: "Delete" } do %>
+          <%= button_to category, method: :delete, class: "btn btn-soft btn-error hover:btn-error", data: { turbo_confirm: "Confirm deletion of #{category.name}.", confirm_button: "Delete" } do %>
             <%= solid_icon_tag("trash") %>
           <% end %>
         </div>
