--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,13 +1,13 @@
-<fieldset class="fieldset bg-base-200 border-base-300 rounded-box border p-4 shadow-lg w-full max-w-lg sm:w-lg mx-auto">
+<fieldset class="mx-auto fieldset w-full max-w-lg rounded-box border border-base-300 bg-base-200 p-4 shadow-lg sm:w-lg">
   <legend class="fieldset-legend"><%= content_for(:title) %></legend>
 
   <%# Turbo is disabled to allow for redirects with anchors: https://github.com/hotwired/turbo/issues/211 %>
   <%= form_with(model: category, class: "contents", data: { turbo: false }) do |form| %>
     <% if category.errors.any? %>
-      <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-md mt-3">
+      <div id="error_explanation" class="mt-3 rounded-md bg-red-50 px-3 py-2 font-medium text-red-500">
         <h2><%= pluralize(category.errors.count, "error") %> prohibited this category from being saved:</h2>
 
-        <ul class="list-disc ml-6">
+        <ul class="ml-6 list-disc">
           <% category.errors.each do |error| %>
             <li><%= error.full_message %></li>
           <% end %>
@@ -16,9 +16,9 @@
     <% end %>
 
     <%= form.label :name %>
-    <%= form.text_field :name, required: true, class: "w-full validator" %>
+    <%= form.text_field :name, required: true, class: "validator w-full" %>
 
-    <%= form.submit class: "btn btn-primary mt-4" %>
+    <%= form.submit class: "btn mt-4 btn-primary" %>
     <% if category.new_record? %>
       <%= link_to "Back", categories_path, class: "btn btn-outline" %>
     <% else %>
