--- a/app/views/home/_bookmark.html.erb
+++ b/app/views/home/_bookmark.html.erb
@@ -1,6 +1,6 @@
 <%# locals: (bookmark:) %>
-<div class="hover:border-l-2 hover:pl-2 transition-all">
+<div class="transition-all hover:border-l-2 hover:pl-2">
   <%= turbo_stream_from bookmark, class: "hidden" %>
 
-  <%= link_to bookmark.name, bookmark.url, target: :_blank, class: "block text-nowrap overflow-hidden text-ellipsis" %>
+  <%= link_to bookmark.name, bookmark.url, target: :_blank, class: "block overflow-hidden text-nowrap text-ellipsis" %>
 </div>
