--- a/app/views/home/sections/_bookmarks.html.erb
+++ b/app/views/home/sections/_bookmarks.html.erb
@@ -1,12 +1,12 @@
 <section class="flex w-full flex-col">
   <% if Setting[:bookmarks_enabled] %>
-    <%= link_to "Bookmarks", bookmarks_path, class: "text-2xl font-bold mt-12 mb-4 uppercase" %>
+    <%= link_to "Bookmarks", bookmarks_path, class: "mt-12 mb-4 text-2xl font-bold uppercase" %>
 
     <%= turbo_stream_from :categories %>
     <%= turbo_stream_from :bookmarks %>
 
     <% if @categories.any? %>
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-x-4 gap-y-8">
+      <div class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
         <%= render partial: "category", collection: @categories, as: :category %>
       </div>
     <% else %>
