Sorted Tailwind classes in icon views

--- a/app/views/icons/_icon.html.erb
+++ b/app/views/icons/_icon.html.erb
@@ -1,5 +1,5 @@
 <tr
-  class="hover:bg-white/10 cursor-pointer"
+  class="cursor-pointer hover:bg-white/10"
   data-action="click->icon-picker-form#select"
   data-id="<%= icon.id %>"
 >
